WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270594
Assertion not taken when falling back to legacy process launch path in Simulator
https://bugs.webkit.org/show_bug.cgi?id=270594
Summary
Assertion not taken when falling back to legacy process launch path in Simulator
Per Arne Vollan
Reported
2024-03-06 12:48:35 PST
Assertion not taken when falling back to legacy process launch path in Simulator
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-03-06 12:49:11 PST
<
rdar://problem/124158739
>
Per Arne Vollan
Comment 2
2024-03-06 12:50:24 PST
Pull request:
https://github.com/WebKit/WebKit/pull/25546
EWS
Comment 3
2024-03-06 13:58:29 PST
Committed
275758@main
(50f99f636b17): <
https://commits.webkit.org/275758@main
> Reviewed commits have been landed. Closing PR #25546 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug