Assertion not taken when falling back to legacy process launch path in Simulator https://bugs.webkit.org/show_bug.cgi?id=270594 rdar://124158739

Reviewed by Chris Dumez.

* Source/WebKit/Platform/cocoa/AssertionCapability.mm:

Canonical link: https://commits.webkit.org/275758@main